  * debian/README.source:
    - Corrected some minor mistakes.
    - Expanded the file (mention get-orig-source).
  * debian/patches/20_rm_python_stub.patch: Added DEP3-compliant header.
  * debian/control: Added libxss-dev to Build-Depends for XScreensaver support
    in src/modules/my/idle_x11.cpp.

  [ Raúl Sánchez Siles ]
  * Improved debian/README.source.  

 -- Kai Wasserbäch <debian@carbon-project.org>  Thu, 21 Jan 2010 15:37:50 +0100

kvirc (4:4.0.0~svn3763-1) unstable; urgency=low

  The »Creatures of the Night« release.

  * Synced to upstream's SVN revision 3763:
    - Updated and improved licensing based on GPLv2+
    - Including a patch from Debian to remove bashisms. (Closes: #535873)
    - Including a German manpage originating from Debian and an Italian manual
      page.
    - Coming with the rewritten notifier.
    - With a new $str.digest implementation, originating from the »no
      embedded« branch (see TODO.Debian for further information).
    - Performance boost thanks to a rewrite of the treewidget class.
    - Fixes an issue with the »popups.kvs« script, addressed in upstream's
      SVN revision 3249 <https://svn.kvirc.de/kvirc/changeset/3249>.
      (Closes: #539874)
    - Fixes an FTBFS with binutils-gold (upstream SVN revision 3596
      <https://svn.kvirc.de/kvirc/changeset/3596>). (Closes: #555068)

  [ Kai Wasserbäch ]
  * debian/control:
    - Standards-Version is now 3.8.3:
    - Remove obsolete Conflicts and Replaces from kvirc-data's definition.
      kvirc-doc isn't even in oldstable (Etch), same applies for versions less
      then 2:3.0.0.
    - Added libcrypto++-dev and pkg-config to Build-Depends, to enable new
      $str.digest code.
    - Ensure Qt 4.5.0 or higher is present (not the case on S390).
    - Added ${misc:Depends} to kvirc-data entry.
    - Improved package descriptions (thanks to Raphael Geissert).
    - Added a Conflicts: for kvirc-dev, so the old package gets removed.
    - Removed CDBS from Build-Depends.